--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "bootstrap": "^5.2.3",
     "vue": "^3.2.45",
+    "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.2"
   },
