--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql2": "^2.2.5"
+    "express-fileupload": "^1.4.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.2.5",
+    "path": "^0.12.7"
   }
 }
